2009-07-28  Michael Calmer <mc@suse.de>

	* release version 0.72

	* src/mod_pam_gnome_keyring.c: enable use_authtok and support new
	option only_if.

2009-05-08  Michael Calmer <mc@suse.de>

	* release version 0.71

	* src/pam-config.c: re-add lost query option [bnc#501341].

2009-04-30  Thorsten Kukuk  <kukuk@suse.de>

	* releaes version 0.70

	* src/mod_pam_ssh.c (write_config_ssh): fix writing of
	options in SESSION mode [bnc#499711].

2009-03-25  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.69

	* src/pam-config.8.xml-header: Document --verify option.

	* src/pam-config.c (main): Implement --verify option.

	* src/sanity_checks.c: Add verify option to all functions,
	pam_cracklib is the new default.
	* src/pam-config.h: Adjust sanitizise function prototypes.

2008-12-18  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_pwhistory.c: Rename type option to authtok_type.
	* src/mod_pam_cracklib.c: Likewise.

	* src/pam-config.c (main): Make pam_cracklib default for new config
	[FATE#305468].

2008-12-01  Michael Calmer  <mc@suse.de>

	* release version 0.68

	* src/pam-config.c: fix linking; accept relative links (bnc#450019)
	* tests/: fix some testcases

2008-11-21  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.67

	* po/*.pot: Update translations for cs, pt_BR, fr, sv, ru

2008-11-19  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_pwhistory.c: Add type as string option.

2008-11-10  Michael Calmer  <mc@suse.de>

	* src/mod_pam_gnome_keyring.c: no options in AUTH section.
	(bnc#443189)

2008-11-07  Michael Calmer  <mc@suse.de>

	* release version 0.66

	* src/pam-modules.h: delete option if argument is 0 (bnc#442552)
	* src/mod_pam_pwcheck.c: remove obsolete parsing code

2008-11-07  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_gnome_keyring.c (write_config_gnome_keyring): New
	[bnc#440448].

	* src/Makefile.am (pam_config_SOURCES): Add mod_pam_gnome_keyring.c

	* src/pam-config.c (main): Implement nullok for single services,