@@ -1,0 +1,4 @@
+----------------------------------------------------------------------
+----------------------------------------------------------------------
+WARNING: cracklib itself has a length limit of 6 characters!
+----------------------------------------------------------------------
