@@ -1,0 +1,171 @@
+----------------------------------------------------------------------
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Authentication-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of the authentication modules that define
+# the central authentication scheme for use on the system
+# (e.g., /etc/shadow, LDAP, Kerberos, etc.). The default is to use the
+# traditional Unix authentication mechanisms.
+#
+auth	required	pam_env.so	
+auth	required	pam_unix2.so	debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Account-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of the accountorization modules that define
+# the central access policy for use on the system.  The default is to
+# only deny service to users whose accounts are expired.
+#
+account	required	pam_unix2.so	debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Password-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of modules that define  the services to be
+# used to change user passwords.
+#
+password	requisite	pam_cracklib.so	
+password	required	pam_unix2.so	use_authtok nullok debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Session-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of modules that define tasks to be performed
+# at the start and end of sessions of *any* kind (both interactive and
+# non-interactive
+#
+session	required	pam_limits.so	
+session	required	pam_unix2.so	debug 
+session	optional	pam_umask.so	
+----------------------------------------------------------------------
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Authentication-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of the authentication modules that define
+# the central authentication scheme for use on the system
+# (e.g., /etc/shadow, LDAP, Kerberos, etc.). The default is to use the
+# traditional Unix authentication mechanisms.
+#
+auth	required	pam_env.so	
+auth	required	pam_unix2.so	debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Account-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of the accountorization modules that define
+# the central access policy for use on the system.  The default is to
+# only deny service to users whose accounts are expired.
+#
+account	required	pam_unix2.so	debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Password-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of modules that define  the services to be
+# used to change user passwords.
+#
+password	requisite	pam_cracklib.so	minlen=3 
+password	required	pam_unix2.so	use_authtok nullok debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Session-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of modules that define tasks to be performed
+# at the start and end of sessions of *any* kind (both interactive and
+# non-interactive
+#
+session	required	pam_limits.so	
+session	required	pam_unix2.so	debug 
+session	optional	pam_umask.so	
+----------------------------------------------------------------------
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Authentication-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of the authentication modules that define
+# the central authentication scheme for use on the system
+# (e.g., /etc/shadow, LDAP, Kerberos, etc.). The default is to use the
+# traditional Unix authentication mechanisms.
+#
+auth	required	pam_env.so	
+auth	required	pam_unix2.so	debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Account-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of the accountorization modules that define
+# the central access policy for use on the system.  The default is to
+# only deny service to users whose accounts are expired.
+#
+account	required	pam_unix2.so	debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Password-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of modules that define  the services to be
+# used to change user passwords.
+#
+password	requisite	pam_cracklib.so	minlen=6 
+password	required	pam_unix2.so	use_authtok nullok debug 
+#%PAM-1.0
+#
+# This file is autogenerated by pam-config. All changes
+# will be overwritten.
+#
+# Session-related modules common to all services
+#
+# This file is included from other service-specific PAM config files,
+# and should contain a list of modules that define tasks to be performed
+# at the start and end of sessions of *any* kind (both interactive and
+# non-interactive
+#
+session	required	pam_limits.so	
+session	required	pam_unix2.so	debug 
+session	optional	pam_umask.so	
