@@ -1,0 +1,21 @@
+#!/bin/sh
+. support/header.sh
+
+echo "----------------------------------------------------------------------"
+echo "----------------------------------------------------------------------" >&2
+$PAMCONFIG -d --pwcheck
+$PAMCONFIG -a --cracklib
+
+. support/footer-common.sh
+
+echo "----------------------------------------------------------------------"
+echo "----------------------------------------------------------------------" >&2
+$PAMCONFIG -a --cracklib-minlen=3
+
+. support/footer-common.sh
+
+echo "----------------------------------------------------------------------"
+echo "----------------------------------------------------------------------" >&2
+$PAMCONFIG -a --cracklib-minlen=6
+
+. support/footer-common.sh
